--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,10 @@
-on: [push, pull_request]
+on: 
+  pull_request:
+    branches:
+    - dev
+  push:
+    branches:
+    - master
 name: Tests
 jobs:
   test:
