--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,4 @@
-on: 
-  pull_request:
-    branches:
-    - dev
-  push:
-    branches:
-    - master
+on: [push, pull_request]
 name: Tests
 jobs:
   test:
