--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   boombot:
     env_file: 
         - boombot.env
-    # image: boombot-local-dev:${TAG:-latest}
+    # image: boombot-local-dev:${TAG:-latest} here for simply launching the image
     build:
       context: .
       dockerfile: ./Dockerfile
